# AVR_CMAKE

./: CMakeLists.txt
libs/spi/: spi.h
spiI2cuart/: max7219dm.c  max7219dm.h  spi.c  spi.h  ssd1306.h
src/: CMakeLists.txt  Iwire.h  RotateBits.S  adc.h  dancing_leds.h  font_small.h  main.c  ports.h  ports.h.gch  timer0.h
